Add environment variable management and Gemini API support
- Add config.js for secure API key management via localStorage
- Add Gemini API integration to cloudAPI.js
- Update .gitignore to exclude .env and sensitive files
- Add .env.example template for API key configuration
- Add comprehensive API_SETUP_GUIDE.md documentation
- Remove hardcoded API keys for security
- Set Gemini as default provider (free tier available)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Dependencies
 /node_modules
 
+# Environment variables and API Keys
+.env
+*.key
+
 # IDEs and editors
 .idea/
 .vscode/
@@ -11,3 +15,11 @@
 ._*
 .Spotlight-V100
 .Trashes
+
+# Backup files
+*.bak
+*_old.js
+
+# Logs
+*.log
+npm-debug.log*
