feat: Add RAG system and purple theme for Reze
UI Updates:
- Changed chat bubble colors from pink to purple (Reze's hair color)
- Updated welcome message style with purple gradient
- Modified typing indicator with purple theme
- Updated all buttons to purple color scheme

RAG System Implementation:
- Added RAG (Retrieval-Augmented Generation) system
- Created reze_knowledge.txt with comprehensive character info from Namuwiki
- Implemented rezeRAG.js for JavaScript RAG integration
- Added rag_reze.py for Python RAG implementation
- Created RAG_GUIDE.md with detailed implementation guide

AI Model Updates:
- Updated Modelfile.reze with Korean-only responses
- Fixed base model from llama3.2:1b to gemma2:2b
- Enhanced ollamaAPI.js with RAG knowledge search
- Fixed ASR model loading with proper local paths

Documentation:
- Added REZE_AI_SETUP.md for local AI setup guide
- Created setup_reze_ai.sh automated setup script
- Updated README.md with new features

Bug Fixes:
- Fixed video loop attribute in index.html
- Improved ASR model error handling in core.js
- Enhanced logging for better debugging

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "bella",
+  "name": "reze",
   "version": "1.0.0",
-  "description": "Bella - A digital companion awakening to life. More than just a program, she's an entity designed to create emotional connections with users.",
+  "description": "Reze - 체인소맨의 레제를 모티프로 한 신비롭고 매력적인 AI 동반자 | A mysterious and charming AI companion inspired by Reze from Chainsaw Man",
   "main": "script.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server -p 8081 -c-1 --cors --headers='{\"Cross-Origin-Opener-Policy\": \"same-origin\", \"Cross-Origin-Embedder-Policy\": \"require-corp\"}'",
-    "download": "node download_models.js"
+    "download": "node download_models.js",
+    "setup-reze": "bash setup_reze_ai.sh",
+    "ollama": "ollama serve"
   },
   "repository": {
     "type": "git",
