--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,40 @@
 # Dependencies
-/node_modules
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environment variables and API Keys
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 *.key
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Model files (too large for git)
+*.pth
+*.ckpt
+*.pt
+*.model
+*.bin
+
+# Large model directories
+models/
 
 # IDEs and editors
 .idea/
 .vscode/
+*.swp
+*.swo
+*~
 
 # OS-generated files
 .DS_Store
@@ -15,11 +42,19 @@
 ._*
 .Spotlight-V100
 .Trashes
+ehthumbs.db
+Thumbs.db
 
 # Backup files
 *.bak
 *_old.js
 
 # Logs
+logs/
 *.log
 npm-debug.log*
+
+# Cache and temp files
+.cache/
+tmp/
+temp/
