--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/GRISHM7890/Bella#readme",
   "dependencies": {
-    "@xenova/transformers": "^2.17.2"
+    "@xenova/transformers": "^2.17.2",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
